@@ -34,8 +34,8 @@ SEXP nextSubStream(SEXP);
 #ifndef WIN32
 SEXP mc_children(void);
 SEXP mc_close_fds(SEXP);
-SEXP mc_close_stderr(void);
-SEXP mc_close_stdout(void);
+SEXP mc_close_stderr(SEXP);
+SEXP mc_close_stdout(SEXP);
 SEXP mc_create_list(SEXP);
 SEXP mc_exit(SEXP);
 SEXP mc_fds(SEXP);
